--- a/osa2/puhelinluettelo/package.json
+++ b/osa2/puhelinluettelo/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
@@ -11,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": ". ${PWD}/.env.local; json-server --w db.json --ng -H ${REACT_APP_API_HOSTNAME:=localhost} -p ${REACT_APP_API_PORT:=3001}",
+    "start-env": ". ${PWD}/.env.local; react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^0.15.1"
   }
 }
