--- a/osa2/maiden_tiedot/package.json
+++ b/osa2/maiden_tiedot/package.json
@@ -1,11 +1,12 @@
 {
   "name": "maiden_tiedot",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
   },
   "scripts": {
